made a lot of major UI changes

--- a/app/assets/javascripts/cars.js.coffee.erb
+++ b/app/assets/javascripts/cars.js.coffee.erb
@@ -144,8 +144,8 @@ $(document).ready ->
                 'autoclose': true
             });
 
-            if $('.limit_results').val().length == 0
-                $('.limit_results').val('20')
+            # if $('.limit_results').val().length == 0
+            #     $('.limit_results').val('20')
 
             if $('.start_date').val().length == 0
                 $('.start_date').datepicker('setDate', new Date())
