--- a/app/views/alarm_notifications/index.html.haml
+++ b/app/views/alarm_notifications/index.html.haml
@@ -1,16 +1,11 @@
 .page-title
   %h3
-    Alarm notifications
+    Alarm Notifications
 
 .row
   .col-md-12
     .grid.simple
-      .grid-title.no-border
-        %h4
-          &nbsp;
-        .tools
-          %a.collapse{href: "javascript:;"}
-      .grid-body.no-border
+      .grid-body
         %table.table.no-more-tables
           %thead
             %tr
