--- a/app/views/device_manufacturers/edit.html.haml
+++ b/app/views/device_manufacturers/edit.html.haml
@@ -1,6 +1,9 @@
-.page-title
-  %h3
-    Editing device manufacturer
+.row
+  .col-md-12
+    .page-title
+      = link_to raw("<i class='icon-custom-left'></i>"), device_manufacturers_path
+      %h3
+        Edit Device Manufacturer
 .row
   .col-md-12
     .grid.simple
@@ -10,15 +13,9 @@
           %span.semi-bold details
         .tools
           %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
-          %a.remove{href: "javascript:;"}
       .grid-body.no-border
         %br/
         .row
           .col-md-8.col-sm-8.col-xs-8
             = render 'form'
-
             = link_to 'Show', @device_manufacturer
-            \|
-            = link_to 'Back', device_manufacturers_path
