--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,10 +2,8 @@
   %h3
     Vehicles (Live)
 .row
-  .col-lg-8.col-md-12.col-sm-12.col-xs-12
-    .row
-      %div
-        %div#cars_index{ :style => "width: 100%; height: 400px;"}
+  .col-lg-8.col-md-12.col-sm-12.col-xs-12{style: "margin-bottom:10px"}
+    %div#cars_index{ :style => "width: 100%; height: 400px;"}
   .col-lg-4.col-md-12.col-sm-12.col-xs-12
     .tiles.white
       .tiles-body
