--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,7 +24,6 @@
           / BEGIN LOGO
           =link_to root_path do 
             = image_tag "logo.png", :class => "logo-image logo"
-          end
           / END LOGO
           / BEGIN LOGO NAV BUTTONS
           %ul.nav.pull-right.notifcation-center
@@ -132,10 +131,7 @@
         #main-menu-wrapper.page-sidebar-wrapper
           / BEGIN SIDEBAR MENU
           %p.menu-title
-            MANAGE
-            %span.pull-right
-              %a{:href => "javascript:;"}
-                %i.fa.fa-refresh
+            ADMINISTRATION
           %ul
             / BEGIN SELECTED LINK
             %li
