--- a/app/views/regions/_form.html.haml
+++ b/app/views/regions/_form.html.haml
@@ -7,4 +7,4 @@
   #map_canvas
 
 .form-group
-  %input{ :type=>"button", :value => "Submit", :id => "submit_polygon" , :required => true}
+  %input{ :type=>"button", :value => "Submit", :id => "submit_polygon" , :required => true, :class => "btn btn-primary"}
