--- a/app/views/alarms/show.html.haml
+++ b/app/views/alarms/show.html.haml
@@ -1,11 +1,14 @@
 .row
-  .col-md-12
+  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
     .page-title
       = link_to raw("<i class='icon-custom-left'></i>"), alarms_path
       %h3
         Alarm
+  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+    .pull-right= link_to 'Edit', edit_alarm_path(@alarm), class: "btn btn-success"
+         
 .row
-  .col-md-6
+  .col-md-12
     .grid.simple
       .grid-body
         %p
@@ -15,8 +18,4 @@
           %b Rules :        
           %ul
             - @alarm.rules.each do |rule|
-              %li= rule_with_params(rule,@alarm)
-
-        = link_to 'Edit', edit_alarm_path(@alarm)
-        \|
-        = link_to 'Back', alarms_path
+              %li= rule_with_params(rule, @alarm)
