--- a/app/views/car_models/index.html.haml
+++ b/app/views/car_models/index.html.haml
@@ -1,10 +1,10 @@
 .row
-  .col-md-12
+  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
     .page-title
       %h3
-        Car Models List 
-        = link_to 'New', new_car_model_path, class: "btn btn-success btn-small"
-
+        Car Models List
+  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+    .pull-right= link_to 'Create', new_car_model_path, class: "btn btn-success"
 
 .row
   .col-md-4
@@ -46,8 +46,7 @@
           %thead
             %tr
               %th Name
-              %th Car manufacturer
-              %th
+              %th Car Manufacturer
               %th
               %th
           %tbody  
