--- a/app/views/car_models/show.html.haml
+++ b/app/views/car_models/show.html.haml
@@ -1,14 +1,16 @@
 .row
+  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
+    .page-title
+      = link_to raw("<i class='icon-custom-left'></i>"), car_models_path
+      %h3
+         Car Model 
+  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+    .pull-right= link_to 'Edit', edit_car_model_path(@car_model), class: "btn btn-success"
+
+.row
   .col-md-12
     .grid.simple
-      .grid-title.no-border
-        %h3
-          Car model
-      .grid-body.no-border
+      .grid-body 
         %p
           %b Name:
           = @car_model.try(:name)
-
-        = link_to 'Edit', edit_car_model_path(@car_model)
-        \|
-        = link_to 'Back', car_models_path
