--- a/app/views/car_types/show.html.haml
+++ b/app/views/car_types/show.html.haml
@@ -1,14 +1,17 @@
 .row
+  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
+    .page-title
+      = link_to raw("<i class='icon-custom-left'></i>"), car_types_path
+      %h3
+        Car Type  
+  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+    .pull-right= link_to 'Edit', edit_car_type_path(@car_type), class: "btn btn-success"
+
+
+.row
   .col-md-12
     .grid.simple
-      .grid-title.no-border
-        %h3
-          Car type
-      .grid-body.no-border
+      .grid-body 
         %p
           %b Type:
           = @car_type.name
-
-        = link_to 'Edit', edit_car_type_path(@car_type)
-        \|
-        = link_to 'Back', car_types_path
