--- a/app/views/cars/show.html.haml
+++ b/app/views/cars/show.html.haml
@@ -1,101 +1,51 @@
 .row
-  .col-md-8.col-lg-6.col-sm-6.col-xs-6
-    .page-title
-      %h3
-        = @car.try(:name).capitalize
-  .col-md-4.col-lg-6.col-sm-6.col-xs-6
-    .pull-right= button_tag "Switch Map view mode", :class => "switch_map_mode btn btn-success"
+  .col-md-12
+    .pull-right= button_tag "Switch Map view mode", :class => "switch_map_mode btn btn-success btn-small"
+
+%br/
 
 .row
   .col-md-12
     = form_tag '', :method => :get, :id => "filter_by_date" do
-      .row
-        .col-lg-10.col-md-8.col-sm-8.col-xs-12
-          .row
-            .col-md-12
-              .tiles.white
-                .tiles-body
-                  .tiles-title
-                    Filter positions by choosing a start & end date 
-                  %br/
-                  .row
-                    .col-lg-3.col-md-12.col-sm-12.col-xs-12
-                      .form-group
-                        .input-group
-                          .input-group-addon
-                            %i.fa.fa-th
-                          = text_field_tag "scope[start_date]", params.try(:[], :scope).try(:[], :start_date), class: "date start_date form-control"                  
-                    .col-lg-2.col-md-12.col-sm-12.col-xs-12
-                      .form-group
-                        .input-group
-                          .input-group-addon
-                            %i.fa.fa-clock-o
-                          = text_field_tag "scope[start_time]", params.try(:[], :scope).try(:[], :start_time), class: "time start_time form-control"
-                    .col-lg-1.col-md-12.col-sm-12.col-xs-12
-                      %div{style: "text-align:center; margin-top:10px; margin-bottom:20px;"}= fa_icon "arrow-right"
-                    .col-lg-3.col-md-12.col-sm-12.col-xs-12
-                      .form-group
-                        .input-group
-                          .input-group-addon
-                            %i.fa.fa-th
-                          = text_field_tag "scope[end_date]", params.try(:[], :scope).try(:[], :end_date), class: "date end_date form-control"
-                    .col-lg-2.col-md-12.col-sm-12.col-xs-12
-                      .form-group
-                        .input-group
-                          .input-group-addon
-                            %i.fa.fa-clock-o
-                          = text_field_tag "scope[end_time]", params.try(:[], :scope).try(:[], :end_time) , class: "time end_time form-control"
-          %br/
-          .row
-            .col-md-12
-              = submit_tag 'Apply filters', :class => "btn btn-default btn-primary"
-        .col-lg-2.col-md-4.col-sm-4.col-xs-12
-          .grid.simple
-            .grid-body
-              .row
-                .col-lg-12
-                  .form-group 
-                    = 'Number of results' 
-                  = number_field_tag "scope[limit_results]", params.try(:[], :scope).try(:[], :limit_results), class: "limit_results form-control"
-      .row 
-        .col-md-12
-          .form-group
-            .pull-right
+      .grid.simple
+        .grid-body
+          .row{style: "height:30px;"}
+            .col-lg-2.col-md-12.col-sm-12.col-xs-12
+              .form-group
+                .input-group
+                  .input-group-addon
+                    %i.fa.fa-th
+                  = text_field_tag "scope[start_date]", params.try(:[], :scope).try(:[], :start_date), class: "date start_date form-control"                  
+            .col-lg-2.col-md-12.col-sm-12.col-xs-12
+              .form-group
+                .input-group
+                  .input-group-addon
+                    %i.fa.fa-clock-o
+                  = text_field_tag "scope[start_time]", params.try(:[], :scope).try(:[], :start_time), class: "time start_time form-control"
+            .col-lg-2.col-md-12.col-sm-12.col-xs-12
+              %div{style: "text-align:center; margin-top:10px; margin-bottom:20px;"}= fa_icon "arrow-right"
+            .col-lg-2.col-md-12.col-sm-12.col-xs-12
+              .form-group
+                .input-group
+                  .input-group-addon
+                    %i.fa.fa-th
+                  = text_field_tag "scope[end_date]", params.try(:[], :scope).try(:[], :end_date), class: "date end_date form-control"
+            .col-lg-2.col-md-12.col-sm-12.col-xs-12
+              .form-group
+                .input-group
+                  .input-group-addon
+                    %i.fa.fa-clock-o
+                  = text_field_tag "scope[end_time]", params.try(:[], :scope).try(:[], :end_time) , class: "time end_time form-control"
+            .col-lg-2.col-md-12.col-sm-12.col-xs-12
+              = submit_tag 'Apply', :class => "btn btn-default btn-primary"
 
 .row
-  .col-md-12
-    .row.tiles-container.tiles.white.hidden-xlg.m-b-20
-      %div
-        %div#cars_show{ :style => "width: 100%; height: 400px;"}
-
-
-.row
-  .col-md-7
+  .col-md-9{style:"margin-bottom:10px"}
+    %div#cars_show{ :style => "width: 100%; height: 400px;"}
+  .col-md-3
     .grid.simple.horizontal.green
       .grid-title
-        %h4 Positions History
-        .tools
-          %a.collapse{href: "javascript:;"}
-      .grid-body
-        - if !@positions.nil? && @positions.count != 0
-          %table.table.no-more-tables
-            %thead
-              %tr
-                %th Address
-                %th Date
-            %tbody
-              
-              - @positions.each do |position|
-                %tr
-                  %td= position.try(:location).try(:address)
-                  %td= position[:time]
-        - else 
-          No positions available, Try to pick another time period.
-
-  .col-md-5
-    .grid.simple.horizontal.green
-      .grid-title
-        %h4 Information Card
+        %h4 Informations
         .tools
           %a.collapse{href: "javascript:;"}
       .grid-body
@@ -136,3 +86,28 @@
         = link_to 'Edit', edit_car_path(@car)
         \|
         = link_to 'Back', cars_path
+
+.row
+  .col-md-12
+    .grid.simple.horizontal.green
+      .grid-title
+        %h4 Positions History
+        .tools
+          %a.collapse{href: "javascript:;"}
+      .grid-body
+        - if !@positions.nil? && @positions.count != 0
+          %table.table.no-more-tables
+            %thead
+              %tr
+                %th Address
+                %th Date
+            %tbody
+              
+              - @positions.each do |position|
+                %tr
+                  %td= position.try(:location).try(:address)
+                  %td= position[:time]
+        - else 
+          No positions available, Try to pick another time period.
+
+  
