--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -13,10 +13,9 @@
               %th Name
               %th
               %th
-              %th
           %tbody
             - @companies.each do |company|
               %tr
-                %td= link_to company.name, company
+                %td= link_to company.name.capitalize, company
                 %td= link_to 'Edit', edit_company_path(company)
                 %td= link_to 'Destroy', company, method: :delete, data: { confirm: 'Are you sure?' }
