--- a/app/views/device_manufacturers/show.html.haml
+++ b/app/views/device_manufacturers/show.html.haml
@@ -1,14 +1,17 @@
 .row
+  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
+    .page-title
+      = link_to raw("<i class='icon-custom-left'></i>"), device_manufacturers_path
+      %h3
+        Device Manufacturer  
+  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+    .pull-right= link_to 'Edit', edit_device_manufacturer_path(@device_manufacturer), class: "btn btn-success"
+
+
+.row
   .col-md-12
     .grid.simple
-      .grid-title.no-border
-        %h3
-          Device manufacturer
-      .grid-body.no-border
+      .grid-body 
         %p
           %b Name:
           = @device_manufacturer.name
-
-        = link_to 'Edit', edit_device_manufacturer_path(@device_manufacturer)
-        \|
-        = link_to 'Back', device_manufacturers_path
