--- a/app/views/device_models/show.html.haml
+++ b/app/views/device_models/show.html.haml
@@ -1,10 +1,16 @@
 .row
+  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
+    .page-title
+      = link_to raw("<i class='icon-custom-left'></i>"), device_models_path
+      %h3
+        Device Model  
+  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+    .pull-right= link_to 'Edit', edit_device_model_path(@device_model), class: "btn btn-success"
+
+.row
   .col-md-12
     .grid.simple
-      .grid-title.no-border
-        %h3
-          Device model
-      .grid-body.no-border
+      .grid-body 
         %p
           %b Name:
           = @device_model.name
@@ -14,7 +20,3 @@
         %p
           %b Protocol:
           = @device_model.protocol
-
-        = link_to 'Edit', edit_device_model_path(@device_model)
-        \|
-        = link_to 'Back', device_models_path
