--- a/app/views/devices/index.html.haml
+++ b/app/views/devices/index.html.haml
@@ -1,12 +1,15 @@
 
+.row
+  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
+    .page-title
+      %h3
+        Devices List 
+  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+    .pull-right= link_to 'Create', new_device_path, class: "btn btn-success"
+
 
 .row
   .col-md-3
-    .row
-      .col-md-12
-        .page-title
-          %h3
-            &nbsp;
     .row
       .col-md-12
         .grid.simple
@@ -84,12 +87,7 @@
 
 
   .col-md-9
-    .row
-      .col-md-12
-        .page-title
-          %h3
-            Devices List 
-            = link_to 'New', new_device_path, class: "btn btn-primary btn-small"
+    
     .row
       .col-md-12
         .grid.simple
