--- a/app/views/devices/show.html.haml
+++ b/app/views/devices/show.html.haml
@@ -1,10 +1,17 @@
 .row
+  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
+    .page-title
+      = link_to raw("<i class='icon-custom-left'></i>"), devices_path
+      %h3
+        Device  
+  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+    .pull-right= link_to 'Edit', edit_device_path(@device), class: "btn btn-success"
+
+
+.row
   .col-md-12
     .grid.simple
-      .grid-title.no-border
-        %h3
-          = Device
-      .grid-body.no-border
+      .grid-body 
         .form-group
           %b Emei:
           = @device.emei
@@ -23,7 +30,3 @@
         .form-group
           %b Simcard:
           = link_to @device.try(:simcard).try(:telephone_number).to_s , @device.try(:simcard)
-
-        = link_to 'Edit', edit_device_path(@device)
-        \|
-        = link_to 'Back', devices_path
