--- a/app/views/features/show.html.haml
+++ b/app/views/features/show.html.haml
@@ -1,17 +1,19 @@
 .row
+  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
+    .page-title
+      = link_to raw("<i class='icon-custom-left'></i>"), features_path
+      %h3
+        Feature  
+  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+    .pull-right= link_to 'Edit', edit_feature_path(@feature), class: "btn btn-success"
+
+.row
   .col-md-12
     .grid.simple
-      .grid-title.no-border
-        %h3
-          Feature
-      .grid-body.no-border
+      .grid-body 
         %p
           %b Name:
           = @feature.name
         %p
           %b Role:
           = @feature.role
-
-        = link_to 'Edit', edit_feature_path(@feature)
-        \|
-        = link_to 'Back', features_path
