--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,10 +1,13 @@
 .row
-  .col-md-3
-    .row
-      .col-md-12
-        .page-title
-          %h3
-            &nbsp;
+  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
+    .page-title
+      %h3
+        Alarm Groups List 
+  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+    .pull-right= link_to 'Create', new_group_path, class: "btn btn-success"
+
+.row
+  .col-md-4
     .row
       .col-md-12
         .grid.simple
@@ -20,13 +23,7 @@
               .form-group
                 = f.submit "Search" ,:class => "btn btn-default"
 
-  .col-md-9
-    .row
-      .col-md-12
-        .page-title
-          %h3
-            Alarm groups List 
-            = link_to 'New', new_group_path, class: "btn btn-primary btn-small"
+  .col-md-8
     .row
       .col-md-12
         .grid.simple
