--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -1,8 +1,15 @@
-.page-title
-  = link_to raw("<i class='icon-custom-left'></i>"), groups_path
-  %h3
-    %span.semi-bold= @group.name
-    Group
+.row
+  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
+    .page-title
+      = link_to raw("<i class='icon-custom-left'></i>"), groups_path
+      %h3
+        Group  
+  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+    .pull-right= link_to 'Edit', edit_group_path(@group), class: "btn btn-success"
+
+
+
+
 
 .row
   .col-md-12
