--- a/app/views/plans/index.html.haml
+++ b/app/views/plans/index.html.haml
@@ -1,8 +1,11 @@
 .row
-  .col-md-12
+  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
     .page-title
       %h3
         Plans List 
+  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+    .pull-right= link_to 'Create', new_plan_path, class: "btn btn-success"
+
 .row
   .col-md-12
     .grid.simple 
