--- a/app/views/plans/show.html.haml
+++ b/app/views/plans/show.html.haml
@@ -1,11 +1,13 @@
 .row
+  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
+    .page-title
+      = link_to raw("<i class='icon-custom-left'></i>"), plans_path
+      %h3
+         Plan  
+  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+    .pull-right= link_to 'Edit', edit_plan_path(@plan), class: "btn btn-success"
+
+.row
   .col-md-12
     .grid.simple
-      .grid-title.no-border
-        %h3
-          Plan
-          %span.semi-bold= @plan.name
-      .grid-body.no-border
-        = link_to 'Edit', edit_plan_path(@plan)
-        \|
-        = link_to 'Back', plans_path
+      .grid-body 
