--- a/app/views/rules/new.html.haml
+++ b/app/views/rules/new.html.haml
@@ -1,22 +1,17 @@
-.page-title
-  %h3
-    New rule
+.row
+  .col-md-12
+    .page-title
+      = link_to raw("<i class='icon-custom-left'></i>"), rules_path
+      %h3
+        Create Rule
 .row
   .col-md-12
     .grid.simple
-      .grid-title.no-border
+      .grid-title 
         %h4
           Rule 
           %span.semi-bold details
-        .tools
-          %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
-          %a.remove{href: "javascript:;"}
-      .grid-body.no-border
-        %br/
+      .grid-body 
         .row
           .col-md-8.col-sm-8.col-xs-8
             = render 'form'
-
-            = link_to 'Back', rules_path
