--- a/app/views/rules/show.html.haml
+++ b/app/views/rules/show.html.haml
@@ -1,11 +1,17 @@
 .row
+  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
+    .page-title
+      = link_to raw("<i class='icon-custom-left'></i>"), rules_path
+      %h3
+         Rule  
+  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+    .pull-right= link_to 'Edit', edit_rule_path(@rule), class: "btn btn-success"
+
+
+.row
   .col-md-12
     .grid.simple
-      .grid-title.no-border
-        %h3
-          Rule
-          %span.semi-bold= @rule.name
-      .grid-body.no-border
+      .grid-body 
         %p
           %b Name:
           = @rule.name
@@ -21,8 +27,3 @@
             - else 
               - @rule.parameters.each do |param|
                 %li= "#{param.name} (#{param.data_type})"
-
-
-        = link_to 'Edit', edit_rule_path(@rule)
-        \|
-        = link_to 'Back', rules_path
