--- a/app/views/simcards/index.html.haml
+++ b/app/views/simcards/index.html.haml
@@ -1,10 +1,15 @@
+
 .row
-  .col-md-3
-    .row
-      .col-md-12
-        .page-title
-          %h3
-            &nbsp;
+  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
+    .page-title
+      %h3
+        Simcard List 
+  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+    .pull-right= link_to 'Create', new_simcard_path, class: "btn btn-success"
+
+
+.row
+  .col-md-4
     .row
       .col-md-12
         .grid.simple
@@ -56,15 +61,7 @@
         
         .col-md-9
           
-              
-
-  .col-md-9
-    .row
-      .col-md-12
-        .page-title
-          %h3
-            Simcards List 
-            = link_to 'New', new_simcard_path, class: "btn btn-success btn-small"
+  .col-md-8
     .row
       .col-md-12
         .grid.simple
