--- a/app/views/teleproviders/index.html.haml
+++ b/app/views/teleproviders/index.html.haml
@@ -1,11 +1,14 @@
+.row
+  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
+    .page-title
+      %h3
+        Teleproviders List 
+  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+    .pull-right= link_to 'Create', new_teleprovider_path, class: "btn btn-success"
+
 
 .row
-  .col-md-3
-    .row
-      .col-md-12
-        .page-title
-          %h3
-            &nbsp;
+  .col-md-4
     .row
       .col-md-12
         .grid.simple
@@ -21,18 +24,11 @@
               .form-group
                 = f.submit "Search" ,:class => "btn btn-default"
 
-  .col-md-9
-    .row
-      .col-md-6
-        .page-title
-          %h3
-            Teleproviders List 
-      .col-md-6  
-        .pull-right= link_to 'New', new_teleprovider_path, class: "btn btn-success"
+  .col-md-8
     .row
       .col-md-12
         .grid.simple
-          .grid-body.no-border
+          .grid-body 
             %table.table.no-more-tables
               %thead
                 %tr
