--- a/app/views/work_schedule_groups/show.html.haml
+++ b/app/views/work_schedule_groups/show.html.haml
@@ -1,12 +1,21 @@
-%p#notice= notice
+.row
+  .col-md-8.col-lg-8.col-sm-8.col-xs-8 
+    .page-title
+      = link_to raw("<i class='icon-custom-left'></i>"), work_schedule_groups_path
+      %h3
+         Work Schedule Group  
+  .col-md-4.col-lg-4.col-sm-4.col-xs-4 
+    .pull-right= link_to 'Edit', edit_work_schedule_group(@work_schedule_group), class: "btn btn-success"
 
-%p
-  %b Company:
-  = @work_schedule_group.company_id
-%p
-  %b Work schedule:
-  = @work_schedule_group.work_schedule_id
+.row
+  .col-md-12
+    .grid.simple
+      .grid-body 
+		%p
+		  %b Company:
+		  = @work_schedule_group.company_id
+		%p
+		  %b Work schedule:
+		  = @work_schedule_group.work_schedule_id
 
-= link_to 'Edit', edit_work_schedule_group_path(@work_schedule_group)
-\|
-= link_to 'Back', work_schedule_groups_path
+
