--- a/app/views/work_schedules/new.html.haml
+++ b/app/views/work_schedules/new.html.haml
@@ -1,8 +1,24 @@
+.row
+  .col-md-12
+    .page-title
+      = link_to raw("<i class='icon-custom-left'></i>"), work_schedules_path
+      %h3
+        Create Work Schedule
 
-.form-group
-	= label_tag :name
-	= text_field_tag :name
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title 
+        %h4
+          Work Schedules
+          %span.semi-bold details
+      .grid-body 
+        .row
+          .col-md-8.col-sm-8.col-xs-8
+            .form-group
+              = label_tag :name
+              = text_field_tag :name
 
-#calendar
-%br/
-%input#submit_calendar{:type => "button", :value => "Submit"}/
+            #calendar
+            %br/
+            %input#submit_calendar{:type => "button", :value => "Submit", class: "btn btn-primary"}/
