--- a/app/views/car_types/edit.html.haml
+++ b/app/views/car_types/edit.html.haml
@@ -1,10 +1,2 @@
-.row
-  .col-md-12
-    .page-title
-      = link_to raw("<i class='icon-custom-left'></i>"), car_types_path
-      %h3
-        Editing Car Type
-.row
-  .col-md-12
-    = render 'form'
+= render 'form', title: "Edit Vehicle Type"
 
