--- a/app/views/cars/edit.html.haml
+++ b/app/views/cars/edit.html.haml
@@ -1,7 +1,1 @@
-
-
-= render 'form', title: "Editing Vehicle"
-
-= link_to 'Show', @car
-\|
-= link_to 'Back', cars_path
+= render 'form', title: "Edit Vehicle"
