--- a/app/views/car_types/new.html.haml
+++ b/app/views/car_types/new.html.haml
@@ -1,11 +1,2 @@
-.row
-  .col-md-12
-    .page-title
-      = link_to raw("<i class='icon-custom-left'></i>"), car_types_path
-      %h3
-        New Car Type
-
-.row
-  .col-md-12
-    = render 'form'
+= render 'form', title: "Create Vehicle Type"
 
