--- a/app/views/companies/edit.html.haml
+++ b/app/views/companies/edit.html.haml
@@ -1,18 +1,17 @@
-.page-title
-  %h3
-    Editing company settings
+.row
+  .col-md-12
+    .page-title
+      %h3
+        Edit company settings
+
 .row
   .col-md-12
     .grid.simple
-      .grid-title.no-border
+      .grid-title
         %h4
-          Company 
+          Company  
           %span.semi-bold details
-        .tools
-          %a.collapse{href: "javascript:;"}
-      .grid-body.no-border
-        %br/
+      .grid-body 
         .row
           .col-md-8.col-sm-8.col-xs-8 
             = render 'form'
-            = link_to 'Back', companies_path
