--- a/app/views/device_manufacturers/new.html.haml
+++ b/app/views/device_manufacturers/new.html.haml
@@ -8,14 +8,11 @@
 .row
   .col-md-12
     .grid.simple
-      .grid-title.no-border
+      .grid-title 
         %h4
           Device manufacturer  
           %span.semi-bold details
-        .tools
-          %a.collapse{href: "javascript:;"}
-      .grid-body.no-border
-        %br/
+      .grid-body 
         .row
           .col-md-8.col-sm-8.col-xs-8
             = render 'form'
