--- a/app/views/plan_types/new.html.haml
+++ b/app/views/plan_types/new.html.haml
@@ -1,21 +1,18 @@
-.page-title
-  %h3
-    New Plan Type
+ 
+.row
+  .col-md-12
+    .page-title
+      = link_to raw("<i class='icon-custom-left'></i>"), plan_types_path
+      %h3
+        Create Plan Type
 .row
   .col-md-12
     .grid.simple
-      .grid-title.no-border
+      .grid-title 
         %h4
-          Plan 
+          Plan Type
           %span.semi-bold details
-        .tools
-          %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
-          %a.remove{href: "javascript:;"}
-      .grid-body.no-border
-        %br/
+      .grid-body 
         .row
           .col-md-8.col-sm-8.col-xs-8
             = render 'form'
-            = link_to 'Back', plan_types_path
