--- a/app/views/simcards/edit.html.haml
+++ b/app/views/simcards/edit.html.haml
@@ -1,24 +1,14 @@
-.page-title
-  %h3
-    Editing simcard
+
+.row
+  .col-md-12
+    .page-title
+      = link_to raw("<i class='icon-custom-left'></i>"), simcards_path
+      %h3
+        Edit Simcard
 .row
   .col-md-12
     .grid.simple
-      .grid-title.no-border
-        %h4
-          Simcard 
-          %span.semi-bold details
-        .tools
-          %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
-          %a.remove{href: "javascript:;"}
-      .grid-body.no-border
-        %br/
+      .grid-body 
         .row
           .col-md-8.col-sm-8.col-xs-8
             = render 'form'
-
-            = link_to 'Show', @simcard
-            \|
-            = link_to 'Back', simcards_path
