--- a/app/views/work_schedule_groups/edit.html.haml
+++ b/app/views/work_schedule_groups/edit.html.haml
@@ -1,7 +1,18 @@
-%h1 Editing work_schedule_group
+.row
+  .col-md-12
+    .page-title
+      = link_to raw("<i class='icon-custom-left'></i>"), work_schedule_groups_path
+      %h3
+        Edit Work Schedule Group
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title 
+        %h4
+          Work Schedule Group 
+          %span.semi-bold details
+      .grid-body
+        .row
+          .col-md-8.col-sm-8.col-xs-8
+			= render 'form'
 
-= render 'form'
-
-= link_to 'Show', @work_schedule_group
-\|
-= link_to 'Back', work_schedule_groups_path
