--- a/app/views/alarm_notifications/index.html.haml
+++ b/app/views/alarm_notifications/index.html.haml
@@ -9,7 +9,7 @@
         %table.table.no-more-tables
           %thead
             %tr
-              %th Car
+              %th Vehicle
               %th Alarm
               %th Triggered at
               %th
