--- a/app/views/car_manufacturers/edit.html.haml
+++ b/app/views/car_manufacturers/edit.html.haml
@@ -3,7 +3,7 @@
     .page-title
       = link_to raw("<i class='icon-custom-left'></i>"), car_manufacturers_path
       %h3
-        Edit Car Manufacturer 
+        Edit Vehicle Manufacturer 
 .row
   .col-md-12
     = render 'form'
