--- a/app/views/car_models/_form.html.haml
+++ b/app/views/car_models/_form.html.haml
@@ -10,7 +10,7 @@
       .grid.simple
         .grid-title
           %h4
-            Car Model 
+            Vehicle Model 
             %span.semi-bold details
         .grid-body
           .row
