--- a/app/views/car_models/edit.html.haml
+++ b/app/views/car_models/edit.html.haml
@@ -3,7 +3,7 @@
     .page-title
       = link_to raw("<i class='icon-custom-left'></i>"), car_models_path
       %h3
-        Edit Car Model
+        Edit Vehicle Model
 .row
   .col-md-12
     = render 'form'
