--- a/app/views/car_models/index.html.haml
+++ b/app/views/car_models/index.html.haml
@@ -2,7 +2,7 @@
   .col-md-8.col-lg-8.col-sm-8.col-xs-8 
     .page-title
       %h3
-        Car Models List
+        Vehicle Models List
   .col-md-4.col-lg-4.col-sm-4.col-xs-4 
     .pull-right= link_to 'Create', new_car_model_path, class: "btn btn-success"
 
@@ -46,7 +46,7 @@
           %thead
             %tr
               %th Name
-              %th Car Manufacturer
+              %th Vehicle Manufacturer
               %th
               %th
           %tbody  
