--- a/app/views/car_types/_form.html.haml
+++ b/app/views/car_types/_form.html.haml
@@ -18,7 +18,7 @@
       .grid.simple
         .grid-title.no-border
           %h4
-            Car type 
+            Vehicle type 
             %span.semi-bold details
         .grid-body.no-border
           %br/
