--- a/app/views/cars/show.html.haml
+++ b/app/views/cars/show.html.haml
@@ -67,10 +67,10 @@
         - else
           = "This car doesn't have a device attached to it yet"
         %br/
-        %b Car model:
+        %b Vehicle model:
         = @car.car_model_id
         %br/
-        %b Car type:
+        %b Vehicle type:
         = @car.car_type_id
         %br/
         %b Registration no:
