--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -44,7 +44,7 @@
           %a.collapse{href: "javascript:;"}
       .grid-title.no-border
         %h3
-          Cars
+          Vehicles
       .grid-body.no-border
         %table.table.no-more-tables
           %thead
