--- a/app/views/car_manufacturers/_form.html.haml
+++ b/app/views/car_manufacturers/_form.html.haml
@@ -10,7 +10,7 @@
       .grid.simple
         .grid-title
           %h4
-            Car Manufacturer 
+            Vehicle Manufacturer 
             %span.semi-bold details
         .grid-body
           .row
