--- a/app/views/car_models/show.html.haml
+++ b/app/views/car_models/show.html.haml
@@ -3,7 +3,7 @@
     .page-title
       = link_to raw("<i class='icon-custom-left'></i>"), car_models_path
       %h3
-         Car Model 
+         Vehicle Model 
   .col-md-4.col-lg-4.col-sm-4.col-xs-4 
     .pull-right= link_to 'Edit', edit_car_model_path(@car_model), class: "btn btn-success"
 
