--- a/app/views/car_types/show.html.haml
+++ b/app/views/car_types/show.html.haml
@@ -3,7 +3,7 @@
     .page-title
       = link_to raw("<i class='icon-custom-left'></i>"), car_types_path
       %h3
-        Car Type  
+        Vehicle Type  
   .col-md-4.col-lg-4.col-sm-4.col-xs-4 
     .pull-right= link_to 'Edit', edit_car_type_path(@car_type), class: "btn btn-success"
 
