--- a/app/views/devices/_form.html.haml
+++ b/app/views/devices/_form.html.haml
@@ -28,9 +28,9 @@
       = f.collection_select(:car_id, Car.cars_without_devices(@device.car_id), :id, :name, {}, class: "form-control" )
     - else 
       - if Car.cars_without_devices(nil).count != 0 
-        = f.collection_select(:car_id, Car.cars_without_devices(nil), :id, :name, { :include_blank => "Pick a car" } , class: "form-control" )
+        = f.collection_select(:car_id, Car.cars_without_devices(nil), :id, :name, { :include_blank => "Pick a Vehicle" } , class: "form-control" )
       - else
-        = f.collection_select(:car_id, Car.cars_without_devices(nil), :id, :name, { :include_blank => "No cars available at this moment" }, class: "form-control" )
+        = f.collection_select(:car_id, Car.cars_without_devices(nil), :id, :name, { :include_blank => "No Vehicles available at this moment" }, class: "form-control" )
       
      
   .form-group
