--- a/app/views/work_schedule_groups/index.html.haml
+++ b/app/views/work_schedule_groups/index.html.haml
@@ -4,7 +4,7 @@
       %h3
         Work schedule groups List 
   .col-md-6
-    .pull-right= link_to 'New', new_work_schedule_group_path, class: "btn btn-success"
+    .pull-right= link_to 'Create', new_work_schedule_group_path, class: "btn btn-success"
 
 
 .row
