--- a/app/views/work_schedules/new.html.haml
+++ b/app/views/work_schedules/new.html.haml
@@ -14,7 +14,7 @@
           %span.semi-bold details
       .grid-body 
         .row
-          .col-md-8.col-sm-8.col-xs-8
+          .col-md-12
             .form-group
               = label_tag :name
               = text_field_tag :name
