Added work schedule to the cars#show view, and removed the necessity to pick work schedule when picking that rule when creating an alarm

--- a/app/views/cars/index.html.haml
+++ b/app/views/cars/index.html.haml
@@ -35,7 +35,7 @@
                 = "All"
               %label 
                 = radio_button_tag 'trackable', 'true' ,false
-                = "Traceabe" 
+                = "Traceable" 
               %label
                 = radio_button_tag 'trackable', 'false' ,false
                 = "Not Traceable"
