Implemented gravatar for profile images + beautified the view for creating alarms/rules (but not done with it yet)

--- a/app/views/alarms/_rule_fields.html.haml
+++ b/app/views/alarms/_rule_fields.html.haml
@@ -1,19 +1,19 @@
 .panel.panel-default
 	.panel-body
 		.nested-fields
-			.field 
+			.form-group.conjunction_field
 				= f.fields_for :conjunction do |c|
 					= c.select :value, ['And', 'Or'] 
 
-			.field
+			.form-group
 				= f.label :name
 				%br
 				= f.collection_select(:id, Rule.all, :id, :name)
 
-			.params
+			.params.form-group 
 				= f.fields_for :params do |p|
 					.field
 
-			= link_to_remove_association "remove rule", f, :class => "btn btn-danger"
+			= link_to_remove_association "Remove", f, :class => "btn btn-danger btn-small"
 
 			%br
