--- a/app/assets/javascripts/cars.js.coffee.erb
+++ b/app/assets/javascripts/cars.js.coffee.erb
@@ -4,121 +4,122 @@
 
 $(document).ready ->
 
-    class CustomMarkerBuilder extends Gmaps.Google.Builders.Marker
-        create_marker: ->
-            options = _.extend @marker_options(), @rich_marker_options()
-            @serviceObject = new RichMarker options
+    if (typeof gon != "undefined") && gon.resource == "cars"
+        class CustomMarkerBuilder extends Gmaps.Google.Builders.Marker
+            create_marker: ->
+                options = _.extend @marker_options(), @rich_marker_options()
+                @serviceObject = new RichMarker options
 
-        rich_marker_options: ->
-            marker = document.createElement("div")
-            marker.setAttribute('class', 'custom_marker')
-            marker.innerHTML = this.args.custom_marker
-            _.extend(@marker_options(), { flat: true })
-            { content: marker }
+            rich_marker_options: ->
+                marker = document.createElement("div")
+                marker.setAttribute('class', 'custom_marker')
+                marker.innerHTML = this.args.custom_marker
+                _.extend(@marker_options(), { flat: true })
+                { content: marker }
 
-        create_infowindow: ->
-            return null unless _.isString @args.custom_infowindow
+            create_infowindow: ->
+                return null unless _.isString @args.custom_infowindow
 
-            boxText = document.createElement("div")
-            boxText.setAttribute("class", 'custom_infowindow')
-            boxText.innerHTML = @args.custom_infowindow
-            @infowindow = new InfoBox(@infobox(boxText))
+                boxText = document.createElement("div")
+                boxText.setAttribute("class", 'custom_infowindow')
+                boxText.innerHTML = @args.custom_infowindow
+                @infowindow = new InfoBox(@infobox(boxText))
 
-        infobox: (boxText)->
-            content: boxText
-            pixelOffset: new google.maps.Size(-60,-60)
-            boxStyle:
-                width: "150px"
+            infobox: (boxText)->
+                content: boxText
+                pixelOffset: new google.maps.Size(-60,-60)
+                boxStyle:
+                    width: "150px"
 
-    switch_to_pins = ->
-        window.current_mode = "pins"
+        switch_to_pins = ->
+            window.current_mode = "pins"
 
-        handler = Gmaps.build("Google", builders: { Marker: CustomMarkerBuilder } )
-        handler.buildMap { provider: { scrollwheel: false }, internal: { id: gon.map_id }}, ->
+            handler = Gmaps.build("Google", builders: { Marker: CustomMarkerBuilder } )
+            handler.buildMap { provider: { scrollwheel: false }, internal: { id: gon.map_id }}, ->
 
-            for one_marker, i in gon.data
+                for one_marker, i in gon.data
 
-                if i == 0 
-                    pin = "<img width='36px' height='36px' src='<%= image_path('red_pin.png') %>'>"
-                else if gon.data.length - 1 == i
-                    pin = "<img width='36px' height='36px' src='<%= image_path('green_pin.png') %>'>"
-                else
-                    pin = "<img width='36px' height='36px' src='<%= image_path('yellow_pin.png') %>'>"
+                    if i == 0 
+                        pin = "<img width='36px' height='36px' src='<%= image_path('red_pin.png') %>'>"
+                    else if gon.data.length - 1 == i
+                        pin = "<img width='36px' height='36px' src='<%= image_path('green_pin.png') %>'>"
+                    else
+                        pin = "<img width='36px' height='36px' src='<%= image_path('yellow_pin.png') %>'>"
 
-                content = "<div>" + one_marker.infowindow + "</div>"
-                
-                marker = handler.addMarker
-                    lat:               one_marker.lat
-                    lng:               one_marker.lng
-                    custom_marker:     pin
-                    custom_infowindow: content
-                handler.bounds.extendWith(marker)
-                
-            handler.fitMapToBounds()
-            handler.getMap().setZoom(11)
+                    content = "<div>" + one_marker.infowindow + "</div>"
+                    
+                    marker = handler.addMarker
+                        lat:               one_marker.lat
+                        lng:               one_marker.lng
+                        custom_marker:     pin
+                        custom_infowindow: content
+                    handler.bounds.extendWith(marker)
+                    
+                handler.fitMapToBounds()
+                handler.getMap().setZoom(11)
+
+                window.handler = handler
+
+        switch_to_directions = ->
+
+            window.current_mode = "directions"
+
+            # Implement directions map
+            directionsDisplay = new google.maps.DirectionsRenderer()
+            directionsService = new google.maps.DirectionsService()
+
+            handler = Gmaps.build("Google")
+
+            handler.buildMap { provider: { scrollwheel: false }, internal: { id: gon.map_id }}, ->
+                directionsDisplay.setMap handler.getMap()
 
             window.handler = handler
-
-    switch_to_directions = ->
-
-        window.current_mode = "directions"
-
-        # Implement directions map
-        directionsDisplay = new google.maps.DirectionsRenderer()
-        directionsService = new google.maps.DirectionsService()
-
-        handler = Gmaps.build("Google")
-
-        handler.buildMap { provider: { scrollwheel: false }, internal: { id: gon.map_id }}, ->
-            directionsDisplay.setMap handler.getMap()
-
-        window.handler = handler
-    
-        array_length = gon.data.length
-
-        first_position = gon.data[array_length - 1]
-        last_position = gon.data[0]
-
-        sliced_array = gon.data.slice(1, array_length - 1)
-
-        origin = new google.maps.LatLng(first_position.lat, first_position.lng)
-        destination = new google.maps.LatLng(last_position.lat, last_position.lng)
-        waypts = []
-
-        if sliced_array.length <= 8
-
-            waypoints_positions = sliced_array
-
-        else 
-
-            steps = Math.round(sliced_array.length/6) - 1
-
-            index_to_fetch = 0
-            waypoints_positions = new Array
-
-            for i in [0...8]
-                waypoints_positions[i] = sliced_array[index_to_fetch]
-                index_to_fetch += steps
-            
-
         
-        for waypoint in waypoints_positions.reverse()
-            waypts.push
-                location: new google.maps.LatLng(waypoint.lat, waypoint.lng)
-                stopover: false
+            array_length = gon.data.length
 
-        window.points = waypts    
+            first_position = gon.data[array_length - 1]
+            last_position = gon.data[0]
 
-        request =
-            origin: origin
-            destination: destination
-            waypoints: waypts
-            travelMode: google.maps.TravelMode.DRIVING
+            sliced_array = gon.data.slice(1, array_length - 1)
 
-        directionsService.route request, (response, status) ->
-            directionsDisplay.setDirections response  if status is google.maps.DirectionsStatus.OK
+            origin = new google.maps.LatLng(first_position.lat, first_position.lng)
+            destination = new google.maps.LatLng(last_position.lat, last_position.lng)
+            waypts = []
 
-    $('.page-sidebar').css('height',$('.page-content').css('height'))
+            if sliced_array.length <= 8
+
+                waypoints_positions = sliced_array
+
+            else 
+
+                steps = Math.round(sliced_array.length/6) - 1
+
+                index_to_fetch = 0
+                waypoints_positions = new Array
+
+                for i in [0...8]
+                    waypoints_positions[i] = sliced_array[index_to_fetch]
+                    index_to_fetch += steps
+                
+
+            
+            for waypoint in waypoints_positions.reverse()
+                waypts.push
+                    location: new google.maps.LatLng(waypoint.lat, waypoint.lng)
+                    stopover: false
+
+            window.points = waypts    
+
+            request =
+                origin: origin
+                destination: destination
+                waypoints: waypts
+                travelMode: google.maps.TravelMode.DRIVING
+
+            directionsService.route request, (response, status) ->
+                directionsDisplay.setDirections response  if status is google.maps.DirectionsStatus.OK
+
+    
 
     if (typeof gon != "undefined") && gon.resource == "cars" 
 
@@ -156,7 +157,7 @@ $(document).ready ->
             basicExampleEl = document.getElementById('filter_by_date');
             datepair = new Datepair(basicExampleEl);
 
-            switch_to_directions()
+            switch_to_pins()
 
             $(".switch_map_mode").click ->
                 if window.current_mode == "pins"
