Rule params now show up with description instaed of name

--- a/app/views/alarms/_rule_fields.html.haml
+++ b/app/views/alarms/_rule_fields.html.haml
@@ -14,6 +14,6 @@
 				= f.fields_for :params do |p|
 					.field
 
-			= link_to_remove_association "Remove", f, :class => "btn btn-danger btn-small"
+			= link_to_remove_association "Remove", f, :class => "btn btn-default btn-small"
 
 			%br
