changed vehicle numberplate to name in home view infobox

--- a/app/assets/javascripts/cars.js.coffee.erb
+++ b/app/assets/javascripts/cars.js.coffee.erb
@@ -180,7 +180,7 @@ $(document).ready ->
 
                     pin = "<img width='36px' height='36px' src='<%= image_path('red_pin.png') %>'>"
                     
-                    content = "<div class='map-tooltip' ><p>#"+ infos[0] + "</p><p>" + infos[1] + "</p><p>" + infos[2] + "</p></div>" 
+                    content = "<div class='map-tooltip' ><p>"+ infos[0] + "</p><p>" + infos[1] + "</p><p>" + infos[2] + "</p></div>" 
 
                     
                     marker = handler.addMarker
